add asyncapi handlers, routes and change swagger routes update swagger doc
